# House-Rules

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  TODO.txt  imgui.ini
Fuze/: CMakeLists.txt
Fuze/assets/shaders/: shader.glsl
Fuze/include/: Application.h  Application.hpp  Core.h  Core.hpp  EntryPoint.h  EntryPoint.hpp  Fuze.h  Fuze.hpp  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  OrthographicCameraController.h  Window.h  fuzepch.h
Fuze/include/Core/: Application.h  Core.h  EntryPoint.h  Fuze.h  Layer.h  LayerStack.h  Log.h  Profiler.h  Timestep.h  Window.h  fuzepch.h
Fuze/include/Events/: ApplicationEvent.h  Event.h  JoystickEvent.h  KeyEvent.h  MouseEvent.h
Fuze/include/ImGui/: ImGuiLayer.h
Fuze/include/Plataform/Linux/: LinuxInput.h  LinuxWindow.h
Fuze/include/Plataform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
Fuze/include/Renderer/: Buffer.h  GraphicsContext.h  OrthographicCamera.h  OrthographicCameraController.h  Renderer.h  Renderer2D.h  RendererAPI.h  RendererCommand.h  Shader.h  SubTexture2D.h  Texture.h  VertexArray.h
Fuze/include/Utils/: FileUtils.h
Fuze/src/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  OrthographicCameraController.cpp  main.cpp
Fuze/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Profiler.cpp
Fuze/src/ImGui/: ImGuiLayer.cpp
Fuze/src/Plataform/Linux/: LinuxInput.cpp  LinuxWindow.cpp
Fuze/src/Plataform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Fuze/src/Renderer/: Buffer.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  RendererCommand.cpp  Shader.cpp  SubTexture2D.cpp  Texture.cpp  VertexArray.cpp
Fuze/src/Utils/: FileUtils.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: basic.glsl  particle.glsl
Sandbox/include/: GUI.hpp  Game.hpp  ParticleSystem.h  Random.h  Sandbox2D.h
Sandbox/src/: Deck.cpp  GUI.cpp  ParticleSystem.cpp  Sandbox2D.cpp  SandboxApp.cpp
Sandbox/src/cards/: Reverse.cpp
include/: Card.hpp  CardMaker.h  CardMaker.hpp  Deck.hpp  Player.hpp
include/cards/: Block.h  Draw2.h  Reverse.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
saves/: cards_setup.txt  default.txt
src/: Card.cpp  CardMaker.cpp  Deck.cpp  Game.cpp  Player.cpp  game.cpp  main.cpp
src/cards/: Block.cpp  Draw2.cpp
